# ssg-mng

./: .gitignore  Cargo.toml  LICENSE  README.md  SETTINGS.md  TODO.md  ssg-mng.config.yaml
_debug/: clear-debug-data.sh  init-prj.sh  jwt-header.txt  post-data.sh
_files/data/templates/: content.html
_files/output/public_html/: post.html  search.html
_files/output/public_html/css/: markdown.css  post.css  search.css
application/: Cargo.toml
application/src/: lib.rs  module.rs
application/src/custom_validator/: validation.rs
application/src/errors/: error.rs
application/src/model/: content.rs  member.rs  mod.rs  search_engine.rs
application/src/usecase/: auth.rs  content.rs
config/: Cargo.toml
config/src/: config.rs
domain/: Cargo.toml
domain/src/: lib.rs  repositories.rs
domain/src/model/: content.rs  member.rs  search_engine.rs
domain/src/repository/: content.rs  html_parser.rs  member.rs  mod.rs  search_engine.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  repositories.rs
infrastructure/src/repository/: content.rs  html_parser.rs  index_writer_handle.rs  member.rs  mod.rs  search_engine.rs
libs/async-argon2/: Cargo.toml
libs/async-argon2/src/: lib.rs
libs/simple-jwt/: Cargo.toml
libs/simple-jwt/src/: lib.rs
presentation/: Cargo.toml
presentation/src/: lib.rs  router.rs
presentation/src/errors/: error.rs
presentation/src/handler/: auth.rs  content.rs  mod.rs  public_handler.rs
presentation/src/middleware/: auth.rs
ssg-mng/: Cargo.toml
ssg-mng/src/: main.rs
swagger/: openapi.yaml
